@@ -8,7 +8,6 @@ import java.util.*;
 import play.Logger;
 import play.Play;
 import play.cache.Cache;
-import play.db.jpa.Transactional;
 import play.libs.IO;
 import play.libs.Mail;
 import play.mvc.*;
@@ -44,7 +43,6 @@ public class TestRunner extends Controller {
         renderText(list);
     }
 
-    @Transactional(autoCommit=true)
     public static void run(String test) throws Exception {
         if (test.equals("init")) {
             File testResults = Play.getFile("test-result");
