@@ -1,10 +1,10 @@
 #{selenium 'Check invocation context resolution'}
 
 	open('@{Application.some1()}')
-	assertTextPresent('@play.db.jpa.Transactional(autoCommit=false, readOnly=false),')
+	assertTextPresent('@play.db.jpa.Transactional(readOnly=false),')
 	
 	open('@{Application.some2()}')
-	assertTextPresent('@utils.Youhou(value=),@play.db.jpa.Transactional(autoCommit=false, readOnly=false),')
+	assertTextPresent('@utils.Youhou(value=),@play.db.jpa.Transactional(readOnly=false),')
 	
 	open('@{Application.some3()}')
 	assertTextPresent('@utils.Youhou(value=fromJob),')
